<resources>
    <string name="app_name">Hero</string>

    <string name="title_feed">Feed</string>
    <string name="title_discover">Discover</string>
    <string name="title_my_challenges">My Challenges</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">876313822454630</string>
    <string name="loginDescription">You must log in with Facebook to use Hero.</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="okay">OK</string>
    <string name="loginFailed">Login failed. Please try again later.</string>
    <string name="user_name">user_name</string>
    <string name="user_key">user_key</string>
    <string name="user_image">user_image</string>
    <string name="user_id">user_id</string>
    <string name="user_fbid">user_fbid</string>
    <string name="placeHolder">Placeholder</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="createdBy">by</string>
    <string name="separator">&#8226;</string>
    <string name="pledgedPlaceholder">$100</string>
    <string name="pledged">pledged</string>
    <string name="donatedToCharity">to charity</string>
    <string name="donatedPlaceholder">$15</string>
    <string name="rules">Rules</string>
    <string name="videos">Videos</string>
    <string name="title_activity_video">Video</string>
    <string name="success">Success</string>
    <string name="pledgeSuccess">Thank you! You are now officially a backer of this challenge.</string>
    <string name="pledgeFailed">Pledge failed. Please try again later.</string>
</resources>
